--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=book-rental-system
 
 #postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.url=${URL}
+spring.datasource.username=${USER_NAME}
+spring.datasource.password=${PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 
